--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~10.2.4",
     "@angular/compiler": "~10.2.4",
     "@angular/core": "~10.2.4",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~10.2.4",
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
@@ -27,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^4.6.1",
+    "firebase": "^8.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ng-chat": "^3.1.0",
@@ -52,6 +54,13 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   }
 }
